@@ -16,6 +16,7 @@ $admin_menu['Server management'][] = array("show"=>true,	"icon"=>"fa-cogs", 		"n
 $admin_menu['Server management'][] = array("show"=>true,	"icon"=>"fa-user",		"name"=>"Users", 					"href"=>"users",					"description"=>"User management");
 $admin_menu['Server management'][] = array("show"=>true,	"icon"=>"fa-users", 	"name"=>"Groups", 	 				"href"=>"groups", 					"description"=>"User group management");
 $admin_menu['Server management'][] = array("show"=>true,	"icon"=>"fa-server", 	"name"=>"Authentication methods", 	"href"=>"authentication-methods", 	"description"=>"Manage user authentication methods and servers");
+$admin_menu['Server management'][] = array("show"=>true,    "icon"=>"fa-unlock",    "name"=>"Password policy",        "href"=>"password-policy",          "description"=>"Set user password policy");
 $admin_menu['Server management'][] = array("show"=>true,	"icon"=>"fa-envelope-o", "name"=>"Mail settings", 			"href"=>"mail", 					"description"=>"Set mail parameters and mail server settings");
 $admin_menu['Server management'][] = array("show"=>true,	"icon"=>"fa-cogs", 		"name"=>"API", 						"href"=>"api", 						"description"=>"API settings");
 if($User->settings->enablePowerDNS==1)
@@ -74,6 +75,7 @@ $admin_menu['Tools'][] = array("show"=>true,	"icon"=>"fa-search-plus", 			"name"
 $admin_menu_items = array(
                         'api',
                 		'authentication-methods',
+                        'password-policy',
                 		'custom-fields',
                 		'dhcp',
                 		'devices',
@@ -110,5 +112,3 @@ $admin_menu_items = array(
                 		'pstn-prefixes'
                     );
 
-
-?>
