@@ -6,14 +6,16 @@
  *
  */
 
+header('Content-Type: text/html; charset=utf-8');
 
 # include required scripts
 require_once( dirname(__FILE__) . '/../../../functions/functions.php' );
 
 # initialize required objects
-$Database 	= new Database_PDO;
-$Result		= new Result;
-$User		= new User ($Database);
+$Database       = new Database_PDO;
+$Result         = new Result;
+$User           = new User ($Database);
+$Password_check = new Password_check ();
 
 # verify that user is logged in
 $User->check_user_session();
@@ -26,8 +28,11 @@ if(!is_numeric($_POST['lang']))                                                 
 
 # verify password if changed (not empty)
 if (strlen($_POST['password1']) != 0) {
-	if ( (strlen($_POST['password1']) < 8) && (!empty($_POST['password1'])) ) 	{ $Result->show("danger alert-absolute", _('Password must be at least 8 characters long!'), true); }
-	else if ($_POST['password1'] != $_POST['password2']) 						{ $Result->show("danger alert-absolute", _('Passwords do not match!', true)); }
+	if ($_POST['password1'] != $_POST['password2']) 							{ $Result->show("danger alert-absolute", _('Passwords do not match!'), true); }
+	# validate pass against policy
+	$policy = (json_decode($User->settings->passwordPolicy, true));
+	$Password_check->set_requirements  ($policy, explode(",",$policy->allowedSymbols));
+	if (!$Password_check->validate ($_POST['password1'])) 						{ $Result->show("danger alert-danger ", _('Password validation errors').":<br> - ".implode("<br> - ", $Password_check->get_errors ()), true); }
 }
 
 # set override
