@@ -1,13 +1,22 @@
 == 1.3.3
 
+    New features:
+    ------------
+    + Configurable password policy;
+
+
     Bugfixes:
     ----------------------------
     + Fix appended " U" in Rack description (#2046)
+    API:
+    + Fix inconsistant API success value returned (#2045)
 
 == 1.3.2
 
     Enhancements, changes:
     ----------------------------
+    + Dark theme added;
+    + Full php7.2 compatibility;
     + url_rewrite has changed, please use new rewrite scheme (https://phpipam.net/news/new_rewrite_scheme/);
     + Search for matching subnet in all VRFs feature enabled when importing addresses;
     + Added new config option to show custom fields separated from standard fields when editing IP address;
